--- a/src/styles.css
+++ b/src/styles.css
@@ -14,36 +14,54 @@ ul {
 }
 li {
   color: darkcyan;
+  margin: 0;
+  padding: 0;
   font-size: 16px;
   font-weight: 100;
-  height: 19px;
-  line-height: 1px;
+  line-height: 19px;
   list-style: none;
+}
+li::first-letter {
+  text-transform: capitalize;
 }
 p {
   text-align: center;
+  font-size: x-small;
+}
+.overview {
+  margin-bottom: 20px;
+}
+.weather-app-wrapper {
+  max-width: 600px;
+  margin: 30px auto;
 }
 .weather-app {
   border: 1px solid rgb(199, 195, 195);
-  padding: 15px;
-  margin: 20px auto;
-  max-width: 600px;
-  border-radius: 10px;
+  padding: 20px;
+  border-radius: 5px;
 }
-.temperature {
-  color: black;
+.weather-temperature img {
+  margin-right: 5px;
+  height: 64px;
+  width: 64px;
+}
+.weather-temperature strong {
+  color: rgb(33, 33, 33);
   font-size: 64px;
   font-weight: 400;
   line-height: 1;
 }
-.weather-icon {
-  height: 64px;
-  width: 64px;
-  margin-right: 10px;
+.weather-temperature .active {
+  color: rgb(33, 33, 33);
+  cursor: default;
 }
-.units {
+.weather-temperature .units {
   position: relative;
+  font-size: 16px;
   top: -34px;
+}
+.weather-temperature .active:hover {
+  text-decoration: none;
 }
 .search-form {
   margin-bottom: 30px;
