--- a/src/styles.css
+++ b/src/styles.css
@@ -66,3 +66,18 @@ p {
 .search-form {
   margin-bottom: 30px;
 }
+.weather-forecast {
+  margin-top: 20px;
+  text-align: center;
+  color: #000;
+}
+.weather-forecast-date {
+  margin-top: 16px;
+  opacity: 0.6;
+}
+.weather-forecast-date {
+  font-size: 13px;
+}
+.weather-forecast-date-min {
+  opacity: 0.5;
+}
